--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,8 +35,8 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v4
       - name: execute copy_dependencies.py
-        run: python copy_dependencies.py
-      - name: execute csv2geojson.py
+        run: python build_webpage/copy_dependencies.py
+      - name: execute build_webpage/csv2geojson.py
         run: python csv2geojson.py
       - name: Move geojsonFeatures.json
         run: mv geojsonFeatures.json webpage/geojsonFeatures.json
