--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -61,11 +61,12 @@ jobs:
           name: build
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - run: ls
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: 'webpage/'
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
